--- a/lab-seth/package.json
+++ b/lab-seth/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "02-rest-server",
+  "name": "08-http-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a simple HTTP server that allows users to input a url to make a cow say something!",
   "main": "index.js",
   "scripts": {
     "test": "jest -i --coverage"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Seth Donohue",
+  "license": "MIT",
   "devDependencies": {
     "eslint": "^4.12.1",
     "jest": "^21.2.1",
     "superagent": "^3.8.1"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
