--- a/lab-catherine/package.json
+++ b/lab-catherine/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest -i --coverage",
     "lint": "eslint .",
-    "start": "node lib/server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
