--- a/lab-seth/package.json
+++ b/lab-seth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest -i --coverage",
-    "start": "node lib/server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Seth Donohue",
