--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest -i --coverage",
     "lint": "eslint ./",
-    "start": "node index.js"
+    "start": "npm run test"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/sedillon93/08-09-vanilla-rest-server#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   },
