--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "![cf](https://i.imgur.com/7v5ASc8.png) Lab 08: REST API ======",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "jest": "jest -i --coverage",
+    "start": "node index.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
