--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "^21.2.1"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "superagent": "^3.8.1",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
