--- a/lab-matt/package.json
+++ b/lab-matt/package.json
@@ -13,6 +13,7 @@
   "author": "Matthew LeBlanc",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "http": "0.0.0",
     "superagent": "^3.8.1",
     "uuid": "^3.1.0",
