--- a/lab-kerry/package.json
+++ b/lab-kerry/package.json
@@ -2,14 +2,14 @@
   "name": "lab-kerry",
   "version": "1.0.0",
   "description": "Vanilla JS REST server with CRUD ops",
-  "main": "server.js",
+  "main": "./lib/server.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
     "test": "jest -i --coverage",
-    "start": "node server.js"
+    "start": "node ./lib/server.js"
   },
   "keywords": [
     "REST",
