--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/sedillon93/08-09-vanilla-rest-server#readme",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "fs-extra": "^4.0.3",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   },
