--- a/lab-david/package.json
+++ b/lab-david/package.json
@@ -17,6 +17,7 @@
     "superagent": "^3.8.1"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   }
