--- a/lab-david/package.json
+++ b/lab-david/package.json
@@ -7,6 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "node ./lib/server.js",
     "test": "jest -i --coverage"
   },
   "author": "",
