--- a/lab-rob/package.json
+++ b/lab-rob/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "fs-extra": "^4.0.3",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   },
