--- a/lab-kerry/package.json
+++ b/lab-kerry/package.json
@@ -26,6 +26,7 @@
     "superagent": "^3.8.1"
   },
   "dependencies": {
+    "fs-extra": "^4.0.3",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   }
