--- a/lab-matt/package.json
+++ b/lab-matt/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "fs-extra": "^4.0.3",
     "http": "0.0.0",
     "superagent": "^3.8.1",
     "uuid": "^3.1.0",
