--- a/lab-nicholasc/package.json
+++ b/lab-nicholasc/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "faker": "^4.1.0",
+    "fs-extra": "^4.0.3",
     "superagent": "^3.8.1",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
