--- a/lab-anthony/package.json
+++ b/lab-anthony/package.json
@@ -17,6 +17,8 @@
     "superagent": "^3.8.1"
   },
   "dependencies": {
+    "dotenv": "^4.0.0",
+    "fs-extra": "^4.0.3",
     "uuid": "^3.1.0",
     "winston": "^2.4.0"
   }
