--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/hazzed/08-09-vanilla-rest-server#readme",
   "dependencies": {
-    "superagent": "^3.8.1",
+    "dotenv": "^4.0.0",
+    "fs-extra": "^5.0.0",
+    "superagent": "^3.8.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
